# rtms

./: .env.example  .gitattributes  .gitignore  DEPLOY_SERVER.md  MIGRATION_PATTERNS.md  README.md  STYLING_GUIDE.md  TROUBLESHOOTING.md  UPDATE_PROCEDURE.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: MQTT_WORKER.md  README.md  alembic.ini  migrate_device_last_known_ip.py  migrate_device_ssh_settings.py  migrate_logging_settings.py  plc_config.json  pyproject.toml  run.py  tree.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260420_01_add_last_known_ip_address.py  20260420_02_replace_planned_fields_with_ssh_settings.py  20260420_03_remove_worker_features.py  20260420_04_add_alarm_parse_rules.py  20260420_05_rename_legacy_alarm_parse_rule.py  20260420_06_rename_plc_export_alarm_parse_rule.py  20260421_01_add_user_auth_state.py  20260421_02_add_pairing_requests.py  20260421_03_add_device_status.py  20260422_01_add_device_action_jobs_and_app_releases.py  20260515_01_add_device_connectors.py  20260518_01_add_on_duplicate_to_device_connectors.py  20260518_02_add_device_connector_logs.py  20260518_03_fix_on_duplicate_values.py  20260519_01_add_last_dispatched_at_to_connectors.py  20260519_02_redesign_alarm_measurements.py  20260519_03_add_alarm_group_id_to_device_connectors.py  20260521_01_add_device_cycle_time_history.py  20260603_01_add_cancelled_at_to_device_action_jobs.py
backend/app/: auth.py  celery_app.py  database.py  env.py  init_db.py  main.py  models.py  mqtt_client.py  mqtt_worker.py  schemas.py
(+327 files in other folders)
