[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.11",
    "paho-mqtt>=2.1.0",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.10.6",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
